# vebgen

./: .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/src/: __init__.py  main.py  vebgen.spec
backend/src/core/: adaptive_agent.py  adaptive_prompts.py  agent_manager.py  anthropic_client.py  code_intelligence_service.py  command_blocklist.json  command_executor.py  config_manager.py  context_manager.py  error_analyzer.py  exceptions.py  file_system_manager.py  google_genai_client.py  hf_client.py  index.html  llm_client.py  memory_manager.py  metrics_tracker.py  openai_client.py  parsing_utils.py  patch_generator.py  performance_monitor.py  post_detail.html  post_list.html  project_models.py  providers.json  remediation_manager.py  remediation_planner.py  script.js  secure_storage.py  security_utils.py  style.css  workflow_manager.py
backend/src/core/analyzers/: accessibility_analyzer.py  performance_analyzer.py
backend/src/core/parsers/: css_parser.py  html_parser.py  vanilla_js_parser.py
backend/src/core/tests/: __init__.py  mock_customtkinter.py  test_adaptive_agent.py  test_agent_manager.py  test_analyzers.py  test_anthropic_client.py  test_code_intelligence.py  test_code_intelligence_service.py  test_command_executor.py  test_config_manager.py  test_context_manager.py  test_css_parser.py  test_error_analyzer.py  test_file_system_manager.py  test_frontend_intelligence.py  test_google_genai_client.py  test_hf_client.py  test_html_parser.py  test_js_html_validator.py  test_llm_client.py  test_main_window.py  test_memory_manager.py  test_openai_client.py  test_parsing_utils.py  test_patch_improvements.py  test_performance_monitor.py  test_project_models.py  test_remediation_flow.py  test_remediation_planner.py  test_search_replace_patching.py  test_secure_storage.py  test_security_utils.py  test_vanilla_js_parser.py  test_workflow_manager.py
backend/src/core/validators/: frontend_validator.py  js_html_validator.py
backend/src/plugins/django/: adaptive_prompts.py  (+1 more)
backend/src/ui/: main_window.py  tooltip.py  user_action_dialog.py
backend/src/utils/: __init__.py  check_db.py  check_model.py
docs/: adaptive_agent.md  adaptive_prompts.md  agent_manager.md  analyzers.md  architecture.md  code_intelligence_service.md  command_executor.md  context_manager.md  css_parser.md  file_system_manager.md  framework_prompts.md  frontend_validator.md  getting_started_dev.md  html_parser.md  js_html_validator.md  llm_clients.md  memory_manager.md  plugin_system.md  project_models.md  providers.md  secure_storage.md  ui_components.md  user_guide.md  vanilla_js_parser.md  workflow_manager.md
docs/api/: README.md
docs/api/core/: agent_manager.md  anthropic_client.md  code_intelligence_service.md  command_executor.md  config_manager.md  error_analyzer.md  exceptions.md  file_system_manager.md  google_genai_client.md  hf_client.md  llm_client.md  memory_manager.md  metrics_tracker.md  openai_client.md  parsing_utils.md  patch_generator.md  project_models.md  remediation_manager.md  remediation_planner.md  secure_storage.md  workflow_manager.md
docs/api/ui/: main_window.md  tooltip.md  user_action_dialog.md
docs/api/utils/: check_db.md  check_model.md
releases/: v0.2.0.md  v0.3.0.md
(+10 files in other folders)
